First commited as before_69414_rev1